Updated rules. Modified weapons. 	modified:   config/rules.html 	modified:   icons/obj/gun.dmi 	modified:   icons/obj/weapons.dmi

--- a/config/rules.html
+++ b/config/rules.html
@@ -1,8 +1,13 @@
 <html>
 <head><title>Server Rules</title></head>
 <body>
-
-<iframe width='100%' height='100%' src="http://baystation12.net/wiki/index.php?title=Rules&printable=yes&remove_links=1" frameborder="0" id="main_frame"></iframe>
-		
-</body>
+<FONT SIZE="+2" COLOR="green">Правила сервера.</FONT><br><ol type ="1"><li>IC = In OOC - Персонаж не должен кричать в IC чат "Я новичок в этой игре" это будет нарущение. В IC пишется такие вещи как "Привет!" или "Здраствуйте, я только прибыл, как дела?". Так же в IC запрещается писать интернет-сленги или смайлики (например Lol, ROFL,:. D, ^ ^, и т.д.)</li>
+<li>OOC = Out of Character - Использования знаний, получеными вне игры, например через Skype.</li>
+<li>Griefing - Без причинное убийство другого игрока, или же разгром станции.</li>
+<li>Metagaming - Использования знаний те что не относятся к вашей профессии (например медик запускает сингулярность).</li>
+<li>Powergaming - Игнорирования боли, страха, а так же носить скафандр без причины, носить вещи в которых не удобно и не комфортно, отмазки в виде "Я смотрю на пару шагов вперёд" или "На всякий случай" принематся не будут.</li>
+<li>Multikeying - Использования нескольких аккаунтов BYOND.</li></ol>
+<li>Stupid names - имена известых людей, имена героев игр, фильмов, и просто идиотские имена запрещены.</li>
+<li>NoRP - (Non Role Play) полное или частичное не поддержание ролеплея игры, строгое нарушение, караеться так же строго.
+<FONT SIZE="+2" COLOR="red">Администратор сам решает было ли нарушение или нет а так же сам решит за что выдовать ban/kick/mute!</FONT></body>
 </html>
