--- a/config/rules.html
+++ b/config/rules.html
@@ -1,13 +1,35 @@
 <html>
-<head><title>Server Rules</title></head>
-<body>
-<FONT SIZE="+2" COLOR="green">Правила сервера.</FONT><br><ol type ="1"><li>IC = In OOC - Персонаж не должен кричать в IC чат "Я новичок в этой игре" это будет нарущение. В IC пишется такие вещи как "Привет!" или "Здраствуйте, я только прибыл, как дела?". Так же в IC запрещается писать интернет-сленги или смайлики (например Lol, ROFL,:. D, ^ ^, и т.д.)</li>
-<li>OOC = Out of Character - Использования знаний, получеными вне игры, например через Skype.</li>
-<li>Griefing - Без причинное убийство другого игрока, или же разгром станции.</li>
-<li>Metagaming - Использования знаний те что не относятся к вашей профессии (например медик запускает сингулярность).</li>
-<li>Powergaming - Игнорирования боли, страха, а так же носить скафандр без причины, носить вещи в которых не удобно и не комфортно, отмазки в виде "Я смотрю на пару шагов вперёд" или "На всякий случай" принематся не будут.</li>
-<li>Multikeying - Использования нескольких аккаунтов BYOND.</li></ol>
-<li>Stupid names - имена известых людей, имена героев игр, фильмов, и просто идиотские имена запрещены.</li>
-<li>NoRP - (Non Role Play) полное или частичное не поддержание ролеплея игры, строгое нарушение, караеться так же строго.
-<FONT SIZE="+2" COLOR="red">Администратор сам решает было ли нарушение или нет а так же сам решит за что выдовать ban/kick/mute!</FONT></body>
+<head><title>Правила Сервера:</title></head>
+
+<p>1. Гриф - Убийство, избиение, кража, нанесение ущерба станции и другие действия, которые мешают другим игрокам. Само собой это не распространяется на спец роли вроде: Трейтор, Генокрад, Маг. Но все же не рекомендуется убивать не-целей и причинять ненужный ущерб. Наказание: Бан от 1 часа до перманентного (вечного).</p>
+
+<p>2. Флуд - Отправления бессмысленных сообщений в ООС чат или в админ хелп вроде - Ololo, xD, реклама других серверов и т.п Наказание: Мут, бан от 30 минут до 3х недель.</p>
+
+<p>3. Не быть идиотом - Постоянный гриф, флуд в радио канал IC, идиотское поведение и и т.п, что не стал бы делать сотрудник NT. Наказание: Бан от 1 часа до перманентного (вечного).</p>
+
+<p>4. Передача игровой информации и кооперативные действия через Skype и подобные программы. Наказание: Бан от 1 дня до перманентного.</p>
+
+<p>5. Не выдавать себя за администрацию сервера. Наказание: От 1 недели до перманентного бана (вечного).</p>
+
+<p>6. Маты в ООС, угрозы и оскорбления других игроков. Наказание: Мут, бан от 10 минут до перманентного (вечного).</p>
+
+<p>7. Манчкинизм - Приобретение вещей на запас, вроде изоляционных перчаток главой персонала, инженерный пояс на медике и т.д (зависит от ситуации). Наказание: Отбирание вещей, бан от 1 часа до 3х дней.</p>
+
+<p>8. Метагейм - Использование тех знаний, которые не может знать ваш персонаж. Например инженер, знающий все о генокраде, умеющий делать бомбы, хирургические операции и пользоваться высокотехнологичными устройствами синдиката, кроме очевидных вещей вроде пистолета (арбалет является высокотехнологичным устройством). Наказание: Бан от 1 часа до 1 недели.</p>
+
+<p>9. Повергейм - Не думаю, что ассистент возьмет пожарный топор и побежит на инопланетянина с криком "Банзай!!!", не испытывает боли при пытках или соглашается на операцию по вырезанию мозга без анестезии. Наказание: Бан от 1 часа до 3х недель.</p>
+
+<p>10. МультиАкк - Использование нескольких аккаунтов в игре. Наказание: От варна (предупреждения) до перманентного бана (вечного).</p>
+
+<p>11. Идиотские или неподходящие имена персонажей, вроде Monster Killer или имена известных персонажей вроде Max Payne, Adolf Huttler. Также запрещены сокращения вроде M' Mary. Наказание: от 10 минут до 1 дня.</p>
+
+<p>12. Скобки, смайлы и сленги в IC чат - запрещены. Наказание: от варна до 2х дней.</p>
+
+<p>13. NonRP(Non Role-Play)Не соблюдение Roleplay на станции(Всякие коробкоголовые(Вы все же сотрудник научной корпораций, а не сумасшедшие преступники), Тотальное не соблюдение вообще атмосфере станции). Наказание: От варна до перманентного бана<p>
+
+<p>14. Абсолютная неграмотность. Неграмотный человек может повредить глаза. Многим неприятно видеть человека который не может связать двух слов. Наказание: От Mute до Бана (1 сутки)<p>
+
+<p>15. Тотальная некомпетентность. Медик оперирует человека, внезапно уходит и оставляет умирать бедного пациента. Анабиозные камеры, а не криокамеры. Служба Безопасности арестовала ассистента за оскорбление другого ассистента(Space-Law). Наказание: От варна до перманентного бана<p>
+
+Незнание правил, не освобождает от ответственности. 
 </html>
